--- a/lib/ibrowse/README
+++ b/lib/ibrowse/README
@@ -2,7 +2,7 @@ $Id$
 
 ibrowse is a HTTP client. The following are a list of features.
 	- RFC2616 compliant (AFAIK) 
-	- supports GET, POST, OPTIONS and HEAD only
+	- supports GET, POST, OPTIONS, HEAD, PUT, DELETE, TRACE only
 	- Understands HTTP/0.9, HTTP/1.0 and HTTP/1.1
 	- Understands chunked encoding
 	- Named pools of connections to each webserver
