Chris Newcombe pointed out a bug in handling HEAD/DELETE requests where a body is not expected. The first request succeeds but the second one hangs because the state of the process handling the connection hasn't been reset properly.

--- a/lib/ibrowse/README
+++ b/lib/ibrowse/README
@@ -29,6 +29,10 @@ CONTRIBUTIONS & CHANGE HISTORY
               prevent port number being included in the Host header when port
               80 is intended.
 
+12-10-2006 -  Chris Newcombe reported bug in dealing with requests where no 
+              body is expected in the response. The first request would succeed
+              and the next request would hang.
+
 Here are some usage examples. Enjoy!
 
 5> ibrowse:start().
